Refactor Design Sprint and Design Thinking documentation for clarity and consistency
- Translated French content to English across multiple sections.
- Updated descriptions and objectives for each phase of the Design Sprint.
- Enhanced structure and formatting for better readability.
- Added key takeaways and summaries to reinforce learning points.
- Improved usability testing guidelines and methods.
- Clarified the differences between low-fidelity and high-fidelity prototypes.
- Emphasized the iterative nature of Design Thinking and the importance of user feedback.

--- a/src/content/docs/en/design-sprint/index.mdx
+++ b/src/content/docs/en/design-sprint/index.mdx
@@ -1,93 +1,80 @@
 ---
 title: Introduction
-description: "Le Design Sprint est une méthode rapide et collaborative pour résoudre un problème complexe en 4 à 5 jours."
+description: "The Design Sprint is a fast and collaborative method to solve a complex problem in 4 to 5 days."
 weight: 1
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+## What Is a Design Sprint?
 
-> [!INFO] Information
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+The **Design Sprint** is a method for solving complex problems in **4 to 5 days**, based on:
 
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-sprint/introduction.m4a"
-  srtUrl="/podcasts/design-sprint/introduction.srt"
-/>
+- **Team collaboration**  
+- **Rapid prototyping**  
+- **User testing**
 
-
-## Qu’est-ce qu’un Design Sprint ?
-
-Le **Design Sprint** est une méthode de résolution de problèmes complexes en **4 à 5 jours**, basée sur :  
-
-- La **collaboration d’équipe**  
-- Le **prototypage rapide**  
-- Les **tests utilisateurs**  
-
-Créé par **Google Ventures** (Jake Knapp, John Zaretsky, Braden Kowitz), il est présenté dans le livre :  
-**Sprint: How to Solve Big Problems and Test New Ideas in Just Five Days (2016)**  
+Created by **Google Ventures** (Jake Knapp, John Zaretsky, Braden Kowitz), it’s described in the book:  
+**Sprint: How to Solve Big Problems and Test New Ideas in Just Five Days (2016)**
 
 ---
 
 ## Design Sprint vs Design Thinking
 
-- Le **Design Thinking** est une **approche générale** centrée utilisateur.  
-- Le **Design Sprint** est une **méthode concrète et rapide** pour l’appliquer.  
-- Processus **linéaire**, sans retour en arrière possible (contrairement au Design Thinking).  
+- **Design Thinking** is a **broad user-centered approach**.  
+- **Design Sprint** is a **fast, structured method** to apply it.  
+- It follows a **linear process**, with no iteration loops (unlike Design Thinking).
 
 ---
 
-## Étapes du Design Sprint 1.0 (5 jours)
+## Design Sprint 1.0 – 5-Day Process
 
-1. **Understand** : comprendre le problème  
-2. **Sketch** : proposer des idées  
-3. **Decide** : choisir une solution  
-4. **Prototype** : créer un prototype testable  
-5. **Test** : recueillir des retours utilisateurs  
+1. **Understand** – Define and explore the problem  
+2. **Sketch** – Generate possible solutions  
+3. **Decide** – Choose the best idea  
+4. **Prototype** – Build a testable prototype  
+5. **Test** – Collect feedback from real users
 
-### Sprint 2.0 (version optimisée – 4 jours)
+### Sprint 2.0 – Optimized (4 Days)
 
-- Réduction du temps, implication de l’équipe complète seulement sur 2 jours.  
-- Jour 1 matin : définition du problème  
-- Jour 1 après-midi : esquisses de solutions  
-
----
-
-## Équipe idéale (4 à 7 personnes)
-
-- **Décideur** : tranche et oriente  
-- **Facilitateur (Sprint Master)** : guide le sprint, reste neutre  
-- **Designer(s)** : conçoivent le prototype  
-- **Expert marketing** : garantit l’alignement stratégique  
-- **Expert technique** : valide la faisabilité  
-- **Service client** : connaît les utilisateurs  
-- **Expert financier** : estime coût / ROI  
+- Shorter duration, full team involved for only 2 days  
+- Day 1 Morning: problem framing  
+- Day 1 Afternoon: solution sketching
 
 ---
 
-## Préparation nécessaire
+## Ideal Team (4 to 7 people)
 
-- Problématique claire + brief  
-- Calendriers bloqués  
-- Pas d’appareils connectés (sauf en distanciel)  
-- Recherche utilisateur préalable  
-- Salle adaptée + matériel : post-it, feutres, papier, etc.  
-
----
-
-## Principes clés
-
-- L’intelligence collective prime sur le génie individuel  
-- Toutes les idées sont valables  
-- Chacun peut s’exprimer  
-- Prototype testable produit rapidement  
-- Les idées sont **visualisées** (pas juste discutées)  
+- **Decider** – Makes final calls  
+- **Facilitator (Sprint Master)** – Guides the process neutrally  
+- **Designer(s)** – Create the prototype  
+- **Marketing Expert** – Ensures strategic alignment  
+- **Tech Expert** – Validates feasibility  
+- **Customer Support** – Brings user insights  
+- **Finance Expert** – Estimates cost and ROI
 
 ---
 
-## À retenir
+## Sprint Preparation
 
-- Le Design Sprint est **collaboratif**, **rapide** et **structuré**  
-- Nécessite une équipe engagée et bien préparée  
-- Ne convient pas à des problèmes trop vagues ou trop simples  
+- Clear problem + project brief  
+- Team calendars cleared  
+- No connected devices (unless remote sprint)  
+- Prior user research  
+- Proper room + materials: post-its, markers, paper, etc.
+
+---
+
+## Key Principles
+
+- Collective intelligence over individual genius  
+- All ideas are welcome  
+- Everyone contributes equally  
+- Fast delivery of a testable prototype  
+- Ideas must be **visualized**, not just discussed
+
+---
+
+## Key Takeaways
+
+- The Design Sprint is **collaborative**, **fast**, and **structured**  
+- Requires a motivated, well-prepared team  
+- Not suitable for overly vague or trivial problems
