--- a/src/content/docs/en/design-sprint/storyboarding-prototyping-testing.mdx
+++ b/src/content/docs/en/design-sprint/storyboarding-prototyping-testing.mdx
@@ -1,105 +1,93 @@
 ---
 title: Prototype & Test
-description: "Étapes de prototypage et de test utilisateurs dans un Design Sprint."
+description: "Prototyping and user testing steps in a Design Sprint."
 weight: 3
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+## Objective
 
-> [!INFO] Information
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
-
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-sprint/storyboarding-prototyping-testing.m4a"
-  srtUrl="/podcasts/design-sprint/storyboarding-prototyping-testing.srt"
-/>
-
-## Objectif
-
-Créer un prototype réaliste et le tester avec des utilisateurs pour valider (ou non) la solution conçue pendant le sprint.
+Create a realistic prototype and test it with users to validate (or invalidate) the solution designed during the sprint.
 
 ---
 
 ## User Test Flow
 
-- Décomposer l'expérience utilisateur en **4 à 6 étapes clés**.
-- Chaque membre propose ses étapes → lecture → vote pour le meilleur parcours.
-- Permet d’aligner l’équipe avant de passer au storyboard.
+- Break down the user journey into **4 to 6 key steps**.
+- Each team member proposes their version → read aloud → vote on the best flow.
+- Helps align the team before moving on to the storyboard.
 
 ---
 
 ## Storyboard
 
-- Visualiser l’expérience utilisateur, étape par étape.
-- Chaque écran est dessiné dans un cadre (papier ou outil numérique).
-- Objectif : montrer **les interactions essentielles** à prototyper.
-- L’équipe identifie ensemble les moments clés ou complexes du parcours.
+- Visualize the user experience, step by step.
+- Each screen is drawn in a frame (paper or digital tool).
+- Goal: highlight the **essential interactions** to prototype.
+- The team collaboratively identifies key or complex moments in the journey.
 
-[Guide storyboard – Design Sprint Kit](https://designsprintkit.withgoogle.com/methodology/phase5-prototype/storyboard)
-
----
-
-## Prototypage
-
-- Créer une **expérience réaliste** à tester.
-- Outils recommandés : **Figma, Adobe XD, InVision, ProtoPie**  
-  (ou PowerPoint / Keynote si compétences limitées).
-- Répartition des tâches : designers (UI), rédacteurs (contenu), autres (images, test planning).
-- Focus sur le **fonctionnel**, inutile d’avoir un rendu pixel perfect.
-- Préparer un **script de test** (objectifs, tâches, questions).
+[Storyboard Guide – Design Sprint Kit](https://designsprintkit.withgoogle.com/methodology/phase5-prototype/storyboard)
 
 ---
 
-## Tests utilisateurs
+## Prototyping
 
-- Réalisés avec 5 utilisateurs types.
-- 3 objectifs :
-  1. Observer l’usage du prototype
-  2. Collecter les feedbacks
-  3. Présenter les résultats aux parties prenantes
-
-### Méthode "Five-Act Interview" (Jake Knapp)
-
-1. Accueil
-2. Questions générales
-3. Présentation du prototype
-4. Tâches à réaliser
-5. Débrief impressions
-
-⚠️ Demander le **consentement** si la session est enregistrée.
+- Build a **realistic experience** for testing.
+- Recommended tools: **Figma, Adobe XD, InVision, ProtoPie**  
+  (or PowerPoint / Keynote if skills are limited).
+- Task distribution: designers (UI), writers (content), others (images, test planning).
+- Focus on **functionality**, no need for a pixel-perfect result.
+- Prepare a **test script** (objectives, tasks, questions).
 
 ---
 
-## Collecte des retours
+## User Testing
 
-### Feedback wall
+- Conducted with 5 representative users.
+- 3 main goals:
+  1. Observe how the prototype is used
+  2. Collect feedback
+  3. Present findings to stakeholders
 
-- Tableau avec 1 colonne par testeur, 1 ligne par question.
+### “Five-Act Interview” Method (Jake Knapp)
+
+1. Welcome
+2. General questions
+3. Show the prototype
+4. Tasks to complete
+5. Debrief and impressions
+
+⚠️ Ask for **consent** if the session is recorded.
+
+---
+
+## Collecting Feedback
+
+### Feedback Wall
+
+- Board with 1 column per tester, 1 row per question.
 
 ### Voltage Control Scorecard
 
-- Tableur collaboratif avec réponses courtes (✔️ / ❌ / ?).
-- Facile à remplir, analyser et partager.
+- Collaborative spreadsheet with short responses (✔️ / ❌ / ?).
+- Easy to fill out, analyze, and share.
 
-[Template Google Sheet](https://docs.google.com/spreadsheets/d/164JSpRqFM5-UVWJ_FcyLYZOvp9uzJBmp/edit)  
-[App avancée](http://app.controltheroom.com/)
-
----
-
-## Enseignements clés
-
-- **L'utilisateur est au centre** : tous les choix doivent répondre à ses besoins réels.
-- Le sprint favorise la **collaboration**, l’**efficacité** et la **décision rapide**.
-- Les tests sont indispensables, même après le sprint.
-- Le prototype est un **outil de validation**, pas une version finale.
+[Google Sheet Template](https://docs.google.com/spreadsheets/d/164JSpRqFM5-UVWJ_FcyLYZOvp9uzJBmp/edit)  
+[Advanced App](http://app.controltheroom.com/)
 
 ---
 
-## À retenir
+## Key Takeaways
 
-- Le prototypage concrétise une vision commune.
-- Les tests utilisateurs permettent d’identifier rapidement ce qui fonctionne ou non.
-- 5 testeurs suffisent pour détecter la majorité des problèmes.
-- Le sprint permet de **gagner des mois** en conception et développement.
+- **The user is central**: every choice should meet real user needs.
+- The sprint promotes **collaboration**, **efficiency**, and **quick decision-making**.
+- Testing is essential, even after the sprint.
+- The prototype is a **validation tool**, not a final version.
+
+---
+
+## Summary
+
+- Prototyping brings a shared vision to life.
+- User testing quickly reveals what works and what doesn’t.
+- 5 testers are enough to catch most usability issues.
+- A sprint can **save months** of design and development time.
