--- a/src/content/docs/en/design-sprint/understand-sketch-decide.mdx
+++ b/src/content/docs/en/design-sprint/understand-sketch-decide.mdx
@@ -1,107 +1,95 @@
 ---
 title: Understand, Sketch, Decide
-description: "Étapes de compréhension, idéation et décision dans un Design Sprint."
+description: "Understand, ideate, and decide steps in a Design Sprint."
 weight: 2
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+## Objective
 
-> [!INFO] Information
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
-
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-sprint/understand-sketch-decide.m4a"
-  srtUrl="/podcasts/design-sprint/understand-sketch-decide.srt"
-/>
-
-## Objectif
-
-Comprendre les besoins des utilisateurs, esquisser des solutions, et décider quelle idée prototyper.
+Understand user needs, sketch potential solutions, and decide which idea to prototype.
 
 ---
 
-## Understand – Compréhension
+## Understand
 
 ### Lightning Talks
 
-- Chaque membre partage sa vision du projet, des utilisateurs et des enjeux.
-- Objectif : établir une vision commune claire.
-- Outils : [Template Lightning Talks (PDF)](https://designsprintkit.withgoogle.com/assets/tools/Template%20for%20Lightning%20Talks.pdf)
+- Each team member shares their vision of the project, users, and challenges.
+- Goal: establish a shared and clear understanding.
+- Tools: [Lightning Talk Template (PDF)](https://designsprintkit.withgoogle.com/assets/tools/Template%20for%20Lightning%20Talks.pdf)
 
 ### HMW – How Might We
 
-- Formaliser les opportunités via des post-its :  
-  _Comment pourrions-nous [action] pour [utilisateur] afin de [résultat] ?_
+- Turn opportunities into post-it questions:  
+  _How might we [action] for [user] in order to [desired outcome]?_
 
 ### Affinity Mapping
 
-- Regrouper les HMW similaires en thématiques.
+- Group similar HMWs into themes.
 
 ### HMW Voting
 
-- Chaque participant vote (3 pastilles) pour prioriser les opportunités clés.
-- Objectif : identifier les idées à creuser.
+- Each participant gets 3 dot stickers to vote on key opportunities.
+- Goal: highlight the ideas worth exploring.
 
 ### Long-Term Goal
 
-- Chaque membre écrit un objectif à atteindre dans 2 ans.
-- Vote + décision finale par le décideur.
+- Each member writes a 2-year success goal.
+- Vote + final decision by the decider.
 
 ---
 
 ## Lightning Demos
 
-- Analyse des solutions déjà existantes sur le marché.
-- Objectif : s’inspirer pour la phase d’idéation.
+- Review existing solutions on the market.
+- Goal: find inspiration for ideation.
 
 ---
 
-## Sketch – Esquisse
+## Sketch
 
-### Phases de sketching
+### Sketching Phases
 
-1. **Notes** : idées en vrac
-2. **Rough Sketches** : premiers dessins
-3. **Crazy 8’s** : 8 idées en 8 minutes
-4. **Solution Sketch** : parcours utilisateurs complets détaillés
+1. **Notes**: jot down ideas
+2. **Rough Sketches**: quick sketches
+3. **Crazy 8’s**: 8 ideas in 8 minutes
+4. **Solution Sketch**: full user flow with annotations
 
 ### Crazy 8’s
 
-- Une idée par minute sur 8 cases
-- Objectif : quantité + créativité, pas de détails
+- One idea per minute across 8 frames
+- Goal: quantity and creativity over detail
 
-### Vote Crazy 8’s
+### Crazy 8’s Voting
 
-- Chaque participant partage ses idées (3 min max)
-- Vote collectif (3 pastilles) pour sélectionner les idées à développer
+- Each participant presents their ideas (max 3 min)
+- Group votes using 3 dot stickers to choose top ideas
 
 ---
 
 ## Solution Sketch
 
-- Esquisse complète et détaillée d’une solution
-- Permet d’articuler fonctionnalités, navigation et wording
-- Les esquisses sont anonymisées pour la phase de décision
+- A complete, detailed sketch of a potential solution
+- Includes layout, navigation, and content
+- Sketches are anonymized for the decision phase
 
 ---
 
-## Decide – Prise de décision
+## Decide
 
-### Étapes
+### Steps
 
-1. **Art Museum** : affichage anonyme des solutions
-2. **Heat Map** : votes illimités sur les parties intéressantes
-3. **Speed Critique** : pitch de chaque solution (2 min)
-4. **Dot Voting** : chaque membre vote pour 2 solutions
-5. **Supervote** : le décideur tranche avec 3 votes
+1. **Art Museum**: display all sketches anonymously
+2. **Heat Map**: unlimited dot voting on interesting parts
+3. **Speed Critique**: quick 2-min pitch per sketch
+4. **Dot Voting**: each person votes for 2 favorite solutions
+5. **Supervote**: the decider uses 3 votes to finalize the choice
 
 ---
 
-## À retenir
+## Key Takeaways
 
-- Impliquer toute l’équipe pour créer une vision commune
-- S’inspirer et générer un grand nombre d’idées
-- Systèmes de vote simples et efficaces pour converger rapidement
-- Permet d’aligner, décider et passer à l’action
+- Involve the whole team to build a shared vision
+- Draw inspiration and generate a wide range of ideas
+- Use simple voting systems for quick convergence
+- Align as a team, make decisions, and move forward
