--- a/src/content/docs/en/design-thinking/ideation.mdx
+++ b/src/content/docs/en/design-thinking/ideation.mdx
@@ -1,141 +1,136 @@
 ---
-title: Idéation
-description: "La phase d’idéation permet de générer un maximum d’idées pour résoudre un problème identifié lors de la phase de définition."
+title: Ideation
+description: "The ideation phase is used to generate as many ideas as possible to solve a problem identified during the definition phase."
 weight: 3
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+## Objectives of the Ideation Phase
 
-> [!INFO] Information
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
-
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-thinking/ideation.m4a"
-  srtUrl="/podcasts/design-thinking/ideation.srt"
-/>
-
-## Objectifs de la phase d’idéation
-
-- Comprendre ce qu’est l’idéation dans le Design Thinking
-- Découvrir différentes techniques pour générer des idées
-- Savoir organiser un **brainstorming** et un **brainwriting**
-- Appliquer la technique du **Crazy 8**
-- Utiliser le **mind mapping** pour structurer ses idées
-- Sélectionner et faire converger les idées pour choisir la meilleure à prototyper
+- Understand what ideation means in Design Thinking  
+- Discover techniques to generate ideas  
+- Learn how to organize a **brainstorming** and a **brainwriting** session  
+- Apply the **Crazy 8** technique  
+- Use **mind mapping** to structure ideas  
+- Select and converge ideas to choose the best one for prototyping  
 
 ---
 
-## L’objectif de cette étape
+## Purpose of This Phase
 
-La phase d’idéation permet de **générer un maximum d’idées** pour résoudre un problème identifié lors de la phase de **définition**.
+The ideation phase aims to **generate a wide range of ideas** to solve a problem identified in the **definition** phase.
 
-Elle se divise en **deux temps** :
+It includes **two steps**:
 
-1️. **Divergence** → Générer un grand nombre d’idées sans filtre 2. **Convergence** → Trier et sélectionner les idées les plus pertinentes
+1. **Divergence** → Generate as many ideas as possible, without judgment  
+2. **Convergence** → Filter and select the most relevant ideas  
 
 ---
 
-## Techniques d’idéation
+## Ideation Techniques
 
-### Le Brainstorming
+### Brainstorming
 
-Un atelier où les participants partagent librement leurs idées.
+A group session where participants freely share ideas.
 
-**Règles du brainstorming :**
+**Rules for effective brainstorming:**
 
-- Un **facilitateur** encadre la session
-- Un cadre convivial (matériel disponible, bonne ambiance)
-- Un **temps limité** (max 45 minutes)
-- Sélection d’un groupe de **8 à 10 participants**
-- **Encourager toutes les idées**, même les plus folles
-- **Interdiction de critiquer** les propositions
-- **Synthèse finale** pour regrouper les meilleures idées
+- A **facilitator** leads the session  
+- Friendly atmosphere (tools available, relaxed environment)  
+- **Time-limited** session (max 45 minutes)  
+- Group of **8 to 10 participants**  
+- **All ideas are welcome**, even wild ones  
+- **No criticism** allowed  
+- **Final synthesis** to group and refine ideas  
 
---
+---
 
-### Le Brainwriting
+### Brainwriting
 
-Une variante écrite du brainstorming, où les idées sont **notées et partagées anonymement**.
+A written version of brainstorming, where ideas are **written down and shared anonymously**.
 
-**Méthodes :**
+**Methods:**
 
-1. **Brainwriting Pool** : Chaque participant écrit ses idées sur des post-it, puis les autres piochent et les enrichissent.
-2. **Brainwriting 6-3-5** : 6 participants notent **3 idées en 5 minutes**, puis passent leur feuille à un autre participant qui ajoute ou améliore les idées.
+1. **Brainwriting Pool**: Everyone writes ideas on sticky notes, then picks others’ notes and adds on.  
+2. **Brainwriting 6-3-5**: 6 people write **3 ideas in 5 minutes**, then pass their sheet to another participant to improve or expand ideas.
 
-**Avantages :**
+**Advantages:**
 
-[x] Évite la peur du jugement
-[x] Encourage toutes les voix à s’exprimer
-[x] Facilite l’approfondissement des idées
+- ✅ Reduces fear of judgment  
+- ✅ Gives everyone a voice  
+- ✅ Helps refine and build on ideas  
 
---
+---
 
-### Le Crazy 8
+### Crazy 8
 
-Une méthode rapide et visuelle pour générer **8 idées en 8 minutes**.
+A fast and visual technique to generate **8 ideas in 8 minutes**.
 
-**Déroulement :**
+**Steps:**
 
-1️. Une feuille est divisée en **8 cases** 2. Chaque participant **esquisse une idée par case** (1 minute par idée) 3. À la fin, chaque participant **présente ses idées** 4. Un **vote** permet de sélectionner les meilleures idées
+1. Fold a paper into **8 sections**  
+2. Each participant **sketches one idea per box** (1 min per idea)  
+3. Everyone **shares their ideas**  
+4. A **voting round** selects the best concepts
 
-💡 **Idéal pour des solutions visuelles comme des interfaces d’application.**
+💡 **Ideal for visual solutions like app interfaces.**
 
---
+---
 
-## Le Mind Mapping
+## Mind Mapping
 
-Un **schéma visuel** qui organise les idées sous forme d’arborescence.
+A **visual diagram** that organizes ideas hierarchically.
 
-**Comment faire ?**
+**How to do it:**
 
-1️. Placer le **problème central** au milieu 2. Relier des **idées principales** sous forme de branches 3. Développer chaque idée avec des sous-branches 4. Regrouper et **hiérarchiser les idées**
+1. Place the **central problem** in the center  
+2. Connect **main ideas** as branches  
+3. Expand each idea with sub-branches  
+4. Group and **prioritize the ideas**
 
-> [!TIP] Outils recommandés :
+> [!TIP] Recommended tools:
 >
-> - **XMind**
-> - **MindMeister**
-> - **Coggle**
-> - **Tableau blanc + post-it**
+> - **XMind**  
+> - **MindMeister**  
+> - **Coggle**  
+> - **Whiteboard + sticky notes**
 
 ---
 
-## Sélectionner et faire converger les idées
+## Selecting and Converging Ideas
 
-Après avoir généré de nombreuses idées, il faut **faire un tri** pour choisir **la meilleure à prototyper**.
+After generating lots of ideas, it’s time to **narrow them down** to select the best one to prototype.
 
-### Méthodes de convergence
+### Convergence Techniques
 
-1. **Le vote par post-it**
+1. **Dot Voting**
 
-- Chaque participant vote pour les idées qu’il préfère.
-- Les idées les plus votées passent à l’étape suivante.
+- Each participant votes on their favorite ideas  
+- Most-voted ideas move to the next phase  
 
-2. **Les 4 catégories**
+2. **The 4-Category Method**
 
-Les idées sont classées selon 4 critères :
+Ideas are categorized as:
 
-- **Le choix rationnel** → L’idée la plus logique
-- **Le choix préféré** → Celle qui plaît le plus aux participants
-- **Le choix du consensus** → Celle qui pourrait convenir à tout le monde
-- **Le choix risqué** → L’idée la plus innovante, mais incertaine
+- **Rational Choice** → The most logical  
+- **Favorite Choice** → Most liked by the group  
+- **Consensus Choice** → Agreed upon by most  
+- **Risky Choice** → Bold, innovative, but uncertain  
 
-**Objectif final : Identifier la meilleure idée à prototyper et tester**.
+**Goal: Select the strongest, most viable idea to prototype and test.**
 
 ---
 
-## Résumé Final
+## Final Summary
 
-L’**idéation** permet de générer un maximum d’idées avant de choisir la plus pertinente.
-Elle se divise en **deux étapes** : **Divergence** (créativité) et **Convergence** (sélection).
+The **ideation** phase helps generate a wide range of ideas before selecting the most relevant one.  
+It’s divided into **two steps**: **Divergence** (creativity) and **Convergence** (selection).
 
-### Techniques d’idéation :
+### Key Techniques:
 
-- **Brainstorming** → Partage libre d’idées en groupe
-- **Brainwriting** → Écriture et amélioration silencieuse des idées
-- **Crazy 8** → 8 idées en 8 minutes sous forme de croquis
-- **Mind Mapping** → Organiser visuellement les idées
-- **Méthodes de sélection** : **Vote par post-it** ou **classement en 4 catégories**
+- **Brainstorming** → Free group sharing  
+- **Brainwriting** → Silent writing and idea building  
+- **Crazy 8** → 8 quick sketch ideas in 8 minutes  
+- **Mind Mapping** → Visual idea organization  
+- **Selection Methods** → Dot voting or 4-category sorting
 
-**L’objectif est d’aboutir à une idée forte et viable pour la phase suivante : le prototypage !**
+**The goal is to end up with one strong, viable idea for the next phase: prototyping!**
