--- a/src/content/docs/en/design-thinking/index.mdx
+++ b/src/content/docs/en/design-thinking/index.mdx
@@ -1,108 +1,98 @@
 ---
-title: Les 5 étapes du Design Thinking
-description: "Le Design Thinking est une méthode de résolution de problèmes centrée sur l’utilisateur, utilisée en entreprise pour stimuler la créativité et favoriser l’innovation."
+title: The 5 Stages of Design Thinking
+description: "Design Thinking is a user-centered problem-solving method used in business to stimulate creativity and foster innovation."
 weight: 0
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+**Design Thinking** is a **user-centered** problem-solving method used in business to stimulate **creativity** and encourage **innovation**.
 
-> [!INFO] Information
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-> <br/>[En savoir plus](/fr/why-ai-podcast)
+It helps design products and services that are **better suited to real user needs**.
 
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-thinking/1.m4a"
-  srtUrl="/podcasts/design-thinking/1.srt"
-/>
+## The 5 Stages of Design Thinking
 
-Le **Design Thinking** est une méthode de résolution de problèmes **centrée sur l’utilisateur**, utilisée en entreprise pour stimuler la **créativité** et favoriser l’**innovation**.
+### 1. Empathize
 
-Elle permet de concevoir des produits et services **mieux adaptés aux besoins réels** des utilisateurs.
+Understand users by putting yourself in their shoes.
 
-## Les 5 étapes du Design Thinking
+**Methods**:
 
-### 1. Empathie
+- Qualitative interviews  
+- Quantitative research  
+- Competitor analysis  
+- Personas  
+- Empathy maps
 
-Comprendre les utilisateurs en se mettant à leur place.
+---
 
-**Méthodes** :
+### 2. Define
 
-- Entretiens qualitatifs
-- Études quantitatives
-- Analyse de la concurrence
-- Personas
-- Cartes d’empathie
+Reframe the problem based on observations.
 
---
+**Tools**:
 
-### 2. Définition
+- Data analysis  
+- The 5 Whys method  
+- Personas & empathy maps  
+- User stories  
+- UX mapping
 
-Reformuler le problème à partir des observations.
+---
 
-**Outils** :
+### 3. Ideate
 
-- Analyse des données
-- Méthode des 5 pourquoi
-- Personas & empathy map
-- User stories
-- UX Mapping
+Generate as many ideas as possible without filtering.
 
---
+**Techniques**:
 
-### 3. Idéation
-
-Générer un maximum d’idées sans se censurer.
-
-**Techniques** :
-
-- Brainstorming
-- Crazy Eight
-- Mind mapping
-- Gamestorming
+- Brainstorming  
+- Crazy Eight  
+- Mind mapping  
+- Gamestorming  
 - Brainwriting
 
---
+---
 
-### 4. Prototypage
+### 4. Prototype
 
-Créer une version simplifiée du produit/service pour le tester rapidement.
+Create a simplified version of the product or service to test quickly.
 
-**Objectif** : expérimenter et matérialiser les idées à faible coût.
+**Goal**: Experiment and bring ideas to life at low cost.
+
+---
 
 ### 5. Test
 
-Faire tester le prototype auprès des utilisateurs.
+Have users test the prototype.
 
-**But** : recueillir des retours, améliorer, recommencer si besoin.
-
----
-
-## Un Processus Itératif
-
-Le Design Thinking n’est **pas linéaire**.
-
-On peut revenir en arrière à tout moment pour ajuster les idées ou affiner la solution.
-
---
-
-## Design Thinking Circulaire : intégrer l’éco-responsabilité
-
-Cette approche intègre les **principes de l’économie circulaire** au processus créatif.
-
-Elle repose sur les **5R** :
-
-1. **Réduire** les ressources utilisées
-2. **Réparer** ce qui est endommagé
-3. **Réutiliser** les composants existants
-4. **Refabriquer** à partir de pièces récupérées
-5. **Recycler** les matériaux en fin de vie
+**Purpose**: Gather feedback, improve, and iterate if necessary.
 
 ---
 
-## Résumé final
+## An Iterative Process
 
-- Le **Design Thinking** permet de **résoudre des problèmes complexes** de manière centrée utilisateur.
-- Il s’appuie sur **5 étapes clés** : empathie, définition, idéation, prototypage, test.
-- C’est une **démarche itérative** qui favorise l’expérimentation.
-- Sa version **circulaire** encourage une conception **durable et responsable**.
+Design Thinking is **not a linear process**.
+
+You can go back at any time to adjust ideas or refine the solution.
+
+---
+
+## Circular Design Thinking: Integrating Eco-Responsibility
+
+This approach incorporates **circular economy principles** into the creative process.
+
+It is based on the **5Rs**:
+
+1. **Reduce** resource consumption  
+2. **Repair** what is damaged  
+3. **Reuse** existing components  
+4. **Remanufacture** from recovered parts  
+5. **Recycle** materials at end of life
+
+---
+
+## Final Summary
+
+- **Design Thinking** helps solve **complex problems** with a user-centered approach.  
+- It relies on **5 key stages**: empathize, define, ideate, prototype, test.  
+- It’s an **iterative method** that encourages experimentation.  
+- Its **circular version** promotes **sustainable and responsible design**.
