--- a/src/content/docs/en/design-thinking/tests.mdx
+++ b/src/content/docs/en/design-thinking/tests.mdx
@@ -1,132 +1,122 @@
 ---
-title: Tests
-description: "La phase de test permet de confronter un prototype à de vrais utilisateurs afin d’identifier ses forces et ses faiblesses avant la mise en production."
+title: Testing
+description: "The testing phase involves exposing a prototype to real users to identify its strengths and weaknesses before production."
 weight: 5
 ---
 
-import SrtPlayer from "../../../../components/jsx/SrtPlayer.jsx";
+## Objectives of the Testing Phase
 
-> [!INFO] Information  
-> Disponible en podcast audio. (Généré par IA avec NoteBook LM by Google)
-
-<SrtPlayer
-  client:only="react"
-  audioSrc="/podcasts/design-thinking/tests.m4a"
-  srtUrl="/podcasts/design-thinking/tests.srt"
-/>
-
-## Objectifs de la phase de test
-
-- Comprendre l’importance des tests utilisateurs dans le Design Thinking
-- Découvrir la notion d’**utilisabilité** et ses critères clés
-- Apprendre à mener un **test d’utilisabilité**
-- Savoir analyser et exploiter les résultats des tests
+- Understand the importance of user testing in Design Thinking  
+- Learn the concept of **usability** and its key criteria  
+- Know how to conduct a **usability test**  
+- Analyze and apply insights from user tests
 
 ---
 
-## L’objectif de cette étape
+## Purpose of This Phase
 
-Après avoir conçu un **prototype**, il est essentiel de le **tester avec de vrais utilisateurs** pour identifier ses forces et ses faiblesses.
+After building a **prototype**, it’s crucial to **test it with real users** to discover strengths and weaknesses.
 
-### Pourquoi tester ?
+### Why Test?
 
-- Vérifier si la solution répond au problème identifié
-- Détecter les points de friction et les améliorations possibles
-- Valider ou ajuster certaines fonctionnalités avant de lancer la production
-- Gagner du temps et économiser des ressources en évitant des erreurs coûteuses
+- Ensure the solution addresses the identified problem  
+- Detect pain points and possible improvements  
+- Validate or adjust features before production  
+- Save time and resources by avoiding costly errors
 
-**Le Design Thinking est itératif** : les tests peuvent nous ramener en **idéation**, **prototypage** ou même en **empathie** si le problème était mal défini au départ.
-
----
-
-## Recruter les testeurs
-
-Pour obtenir des retours pertinents :
-
-- Sélectionner des **utilisateurs correspondant au public cible**
-- Idéalement, impliquer des **participants ayant déjà donné des retours** en phase d’empathie
-- **5 testeurs** suffisent souvent pour identifier les problèmes majeurs
+**Design Thinking is iterative**: testing may lead back to **ideation**, **prototyping**, or even **empathy** if the problem was misdefined.
 
 ---
 
-## Qu’est-ce que l’Utilisabilité ?
+## Recruiting Testers
 
-L’**utilisabilité** désigne la facilité d'utilisation d’un produit par un utilisateur pour atteindre un objectif efficacement.
+To get relevant feedback:
 
-Selon l’**Interaction Design Foundation**, elle repose sur 5 critères :
-
-- **Efficacité** → L'utilisateur peut-il accomplir sa tâche avec succès ?
-- **Productivité** → La solution permet-elle d'exécuter les tâches rapidement ?
-- **Engagement** → L’expérience utilisateur est-elle plaisante et intuitive ?
-- **Tolérance aux erreurs** → Les erreurs sont-elles bien gérées et compréhensibles ?
-- **Facilité d’apprentissage** → Un nouvel utilisateur peut-il utiliser le produit facilement ?
+- Select **users that match your target audience**  
+- Ideally involve **participants already consulted** during the empathy phase  
+- **5 testers** are often enough to uncover most critical issues
 
 ---
 
-## Qu’est-ce qu’un Test d’Utilisabilité ?
+## What Is Usability?
 
-Un **test d’utilisabilité** consiste à **observer comment un utilisateur interagit avec un prototype** pour identifier les obstacles et améliorer l’expérience.
+**Usability** refers to how easily a user can achieve a goal using a product.
 
-### Déroulement d’un test d’utilisabilité
+According to the **Interaction Design Foundation**, it is based on five key criteria:
 
-1. **Préparer un scénario et des tâches**
-
-   - Définir une action à accomplir sur le prototype
-   - Exemples : « Réservez un billet d’avion », « Ajoutez un article au panier »
-
-2. **Introduire le test**
-
-   - Expliquer l’objectif sans donner trop d’indications
-   - Encourager l’utilisateur à **exprimer ses pensées à haute voix**
-
-3. **Observer l’utilisateur en action**
-
-   - Regarder comment il navigue
-   - Poser des questions ouvertes :
-     - « Que pensez-vous de cette interface ? »
-     - « Pourquoi avez-vous cliqué ici ? »
-     - « Qu’espériez-vous voir après cette action ? »
-
-4. **Noter les points de friction et les réactions**
-
-   - Observer les hésitations, frustrations, gestes non intuitifs
-   - Filmer l’écran (avec consentement) pour analyse détaillée
-
-5. **Conclure avec un retour global**
-   - Poser des questions sur l’expérience utilisateur
-   - Vérifier si le produit répond aux attentes
-   - Discuter du prix ou d’autres aspects pertinents
+- **Effectiveness** → Can users successfully complete tasks?  
+- **Efficiency** → Can tasks be performed quickly?  
+- **Engagement** → Is the experience enjoyable and intuitive?  
+- **Error Tolerance** → Are mistakes well-handled and understandable?  
+- **Learnability** → Can new users easily learn to use the product?
 
 ---
 
-## Restitution des résultats et ajustements
+## What Is a Usability Test?
 
-Après les tests, il faut **analyser les données** et décider des prochaines étapes.
+A **usability test** involves **observing how users interact with a prototype** to identify obstacles and improve the experience.
 
-### Que faire après un test ?
+### Steps of a Usability Test
 
-- Synthétiser les **problèmes majeurs** et les **points d’amélioration**
-- Retourner à l’étape **d’idéation** si des problèmes majeurs émergent
-- Itérer sur le prototype avant une **mise en production**
-- Si les tests sont positifs, envisager le **développement final**
+1. **Prepare a scenario and tasks**
 
-**Un test n’est pas un échec si des problèmes sont trouvés : c’est une opportunité d’amélioration.**
+   - Define a specific action to perform  
+   - Examples: “Book a flight”, “Add a product to the cart”
+
+2. **Introduce the test**
+
+   - Explain the purpose without giving too much guidance  
+   - Encourage users to **think out loud**
+
+3. **Observe user interaction**
+
+   - Watch their navigation  
+   - Ask open-ended questions:  
+     - “What do you think of this interface?”  
+     - “Why did you click here?”  
+     - “What were you expecting to happen?”
+
+4. **Note pain points and reactions**
+
+   - Spot hesitation, frustration, or confusing behavior  
+   - Screen-record (with consent) for detailed review
+
+5. **Conclude with overall feedback**
+
+   - Ask for their opinion on the experience  
+   - Check if the product meets their expectations  
+   - Discuss pricing or other relevant topics if needed
 
 ---
 
-## Exemples de méthodes de test utilisateurs
+## Analyzing Results and Next Steps
 
-- **Test en laboratoire** → Observation détaillée en environnement contrôlé
-- **Test à distance** → Utilisateurs testent depuis chez eux via des outils comme Maze, Lookback
-- **Guerilla Testing** → Test rapide et informel dans des lieux publics
+After testing, you need to **analyze the findings** and decide what to do next.
+
+### What to Do After a Test?
+
+- Summarize **major issues** and **suggested improvements**  
+- Go back to the **ideation phase** if needed  
+- Iterate on the prototype before production  
+- If feedback is positive, proceed with **final development**
+
+**A test is not a failure if problems are found — it's an opportunity to improve.**
 
 ---
 
-## Résumé Final
+## Examples of User Testing Methods
 
-- Tester un prototype est essentiel pour identifier et corriger les problèmes avant le développement final
-- L’**utilisabilité** repose sur 5 critères clés : efficacité, productivité, engagement, tolérance aux erreurs et facilité d’apprentissage
-- Le **test d’utilisabilité** consiste à observer comment un utilisateur interagit avec le produit et à analyser ses retours
-- Les résultats des tests permettent d’itérer et d’améliorer le prototype avant sa mise en production
+- **Lab Testing** → In-depth observation in a controlled environment  
+- **Remote Testing** → Users test from home using tools like Maze, Lookback  
+- **Guerrilla Testing** → Quick informal tests in public places
 
-**Une fois le produit validé, il est prêt à être développé et déployé.**
+---
+
+## Final Summary
+
+- Testing a prototype is essential to identify and fix issues before development  
+- **Usability** depends on five core criteria: effectiveness, efficiency, engagement, error tolerance, and learnability  
+- A **usability test** involves observing users and analyzing their feedback  
+- Test results guide improvements before launching the final product
+
+**Once validated, the product is ready for development and deployment.**
